fixed alignment

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -587,11 +587,16 @@ footer {
     margin-left:auto;
     margin-right:auto;
 
-    align-items: center;
-    justify-content:center;
     display:flex;
+    align-items: center;
+    justify-content: center;
     color:white;
     padding:15px;
+}
+.e-banner-container{
+    width:50%;
+    display:flex;
+    justify-content: center;
 }
 .entertainment-banner p {
     font-size:40px;
@@ -2080,6 +2085,9 @@ input{
     .entertainment-header{
         width:100%;
         font-size:22px;
+    }
+    .e-banner-container{
+        width:100%;
     }
     .home-entertainment-row{
         height:400px;
